rusty-cdk-macros/tests/fails/schedule_rate_zero_value.rs
use rusty_cdk_macros::schedule_rate_expression;

fn main() {
    schedule_rate_expression!(0, "hours");
}
